--- a/Meeting/MIDI.js-master/examples/sample.html
+++ b/Meeting/MIDI.js-master/examples/sample.html
@@ -82,10 +82,10 @@ function playHalf(){
 	setTimeout(function(){
 		MIDI.noteOff(0,69,0);
 	},2*1000*60/bpm1);
-	cou++;
+	cou+=2;
 	if(cou<4){
 		setTimeout(function(){
-			playQuarter();
+			playHalf();
 		},2*1000*60/bpm1);
 	}
 	else if(cou>=4){
