--- a/Meeting/MIDI.js-master/examples/sample.html
+++ b/Meeting/MIDI.js-master/examples/sample.html
@@ -26,7 +26,7 @@
 <h1 style="text-align:center"> simple test </h1>
 
 <hr>
-BPM <input id='tempo' type=range min=30 max=120><span id='bpm'>60</span>
+BPM <input id='tempo' type=range min=60 max=180><span id='bpm'></span>
 <br><br>
 <div id="container" style="float:left; margin:3px; width:60vw; height:50vw">
 </div>
@@ -50,6 +50,7 @@ var raycaster = new THREE.Raycaster();
 var cou=0;
 init();
 animate();
+$('#bpm').text ($('#tempo').val());
 $('#tempo').change ( function() {
 	$('#bpm').text ($(this).val());
 	var bpm1 = $('#tempo').val();
