--- a/Meeting/MIDI.js-master/examples/sample.html
+++ b/Meeting/MIDI.js-master/examples/sample.html
@@ -54,8 +54,7 @@ $('#bpm').text ($('#tempo').val());
 $('#tempo').change ( function() {
 	$('#bpm').text ($(this).val());
 	var bpm1 = $('#tempo').val();
-	//countSecond();
-	//myStopFunction;
+	myStopFunction();
 
 });
 function myStopFunction() {
@@ -69,9 +68,7 @@ function playQ(){
 }
 function playQuarter(){
 	var bpm1 = $('#tempo').val();
-	console.log(bpm1);
 	MIDI.noteOn(0,69,127,0);
-	console.log('Q');
 	setTimeout(function(){
 		MIDI.noteOff(0,69,0);
 	},1000*60/bpm1);
@@ -88,9 +85,7 @@ function playQuarter(){
 
 function playHalf(){
 	var bpm1 = $('#tempo').val();
-	console.log(bpm1);
 	MIDI.noteOn(0,69,127,0);
-	console.log('H');
 	setTimeout(function(){
 		MIDI.noteOff(0,69,0);
 	},2*1000*60/bpm1);
