--- a/Meeting/MIDI.js-master/examples/violin8.html
+++ b/Meeting/MIDI.js-master/examples/violin8.html
@@ -547,7 +547,7 @@ function init() {
 
 	bow.rotation.y=Math.PI/2;
 	bow.rotation.z=Math.PI/2;
-	bow3 = new THREE.Mesh( new THREE.CylinderGeometry( 0.05, 0.05, 10, 32 ),new THREE.MeshLambertMaterial( {color: 0xffffff} ));
+	bow3 = new THREE.Mesh( new THREE.CylinderGeometry( 0.05, 0.05, 10, 32 ),new THREE.MeshLambertMaterial( {color: 0xffffff,visible:false} ));
 	violin1.add( bow3 );
 	bow3.position.set(-0.79,0.516,0.3);
 	///scene.add( bow3 );
