--- a/Meeting/MIDI.js-master/examples/violin8.html
+++ b/Meeting/MIDI.js-master/examples/violin8.html
@@ -336,7 +336,7 @@ function makeEventArray () {
 	eventArray.push(new Event(4.5, 0.5, 76, 'U', 0.25, 'E',0.8));
 	eventArray.push(new Event(5, 0.5, 78, 'D', 0.25, 'E',0.6));
 	eventArray.push(new Event(5.5, 0.5, 74, 'U', 0.25, 'A',0.4));
-	eventArray.push(new Event(6, 2, 72, 'D', 0.5, 1,'A',0.4));
+	eventArray.push(new Event(6, 2, 72, 'D', 0.5, 'A',0.4));
 	return eventArray;
 }
 
