--- a/Meeting/MIDI.js-master/examples/notation3.html
+++ b/Meeting/MIDI.js-master/examples/notation3.html
@@ -254,7 +254,7 @@ function onDocumentMouseDown(event) {
 	postoNote(notesymbol1.position.y);
 	//console.log(postoNote(notesymbol1.position.y));
 	//console.log(notesymbol1.position.y.toFixed(1));
-	music((notesymbol1.position.x+34)/5,postoNote(notesymbol1.position.y),0.8);
+	Event((notesymbol1.position.x+34)/5,postoNote(notesymbol1.position.y),0.8);
 	console.log(notes);
   }
 
