--- a/Meeting/MIDI.js-master/examples/notation3.html
+++ b/Meeting/MIDI.js-master/examples/notation3.html
@@ -29,7 +29,9 @@ body {
 <div id="info">
 <button id='playnotes'>play</button>
 <button id='undo'>Undo</button><br>
-<span id = "bpm"></span>
+<span id = "bpm"></span><br>
+
+BPM <input id='tempo' type="range" min=30 max=210 value = 60><span id = "bpm1">60</span><br>
 </div>
 
 <script src="../inc/shim/Base64.js" type="text/javascript"></script>
@@ -61,7 +63,9 @@ var notes=[];
 var count = 0;
 var msecsFirst = 0;
 var msecsPrevious = 0;
-
+var BPM = 60;
+let time2Beat = (msec) => ( msec / 1000 * BPM / 60 );
+let beat2Time = (beat) => ( beat * 60000 / BPM );  // return msec
 init();
 animate();
 $('#playnotes').click(function(){
@@ -72,13 +76,11 @@ $('#undo').click(function(){
 	scene.remove(scene.getObjectByName(notesymbolnums--));
   console.log(notes);
 });
-
+$('#tempo').change ( function() {
+	$('#bpm1').text ($(this).val());
+	BPM = $('#tempo').val();
+});
 //////////////////////
-
-var count = 0;
-var msecsFirst = 0;
-var msecsPrevious = 0;
-
 
 document.onkeydown = function(){
 	var keycode = event.which || event.keyCode;
@@ -233,7 +235,7 @@ function onWindowResize() {
 }
 
 function onDocumentMouseDown(event) {
-	event.preventDefault();
+	//event.preventDefault();
 	// NDC: [-1,1]x[-1,1]
 
 	mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
