--- a/Meeting/MIDI.js-master/examples/notation3.html
+++ b/Meeting/MIDI.js-master/examples/notation3.html
@@ -257,6 +257,7 @@ function onDocumentMouseDown(event) {
 	//console.log(postoNote(notesymbol1.position.y));
 	//console.log(notesymbol1.position.y.toFixed(1));
 	Event((notesymbol1.position.x+34)/5,postoNote(notesymbol1.position.y),0.8);
+	MIDI.noteOn(0,postoNote(notesymbol1.position.y),127,0);
 	console.log(notes);
   }
 
