--- a/Meeting/MIDI.js-master/examples/notation3.html
+++ b/Meeting/MIDI.js-master/examples/notation3.html
@@ -31,7 +31,9 @@ body {
 <button id='undo'>Undo</button><br>
 <span id = "bpm"></span><br>
 
+
 BPM <input id='tempo' type="range" min=30 max=210 value = 60><span id = "bpm1">60</span><br>
+空白鍵亦可控制BPM
 </div>
 
 <script src="../inc/shim/Base64.js" type="text/javascript"></script>
@@ -86,7 +88,7 @@ document.onkeydown = function(){
 	var keycode = event.which || event.keyCode;
 	if(keycode == 32){
 		TapForBPM();
-		
+
 	}
 }
 
@@ -111,7 +113,8 @@ function TapForBPM(){
 	}
 	msecsPrevious = timeSeconds;
 	AvgValue=AvgValue.toFixed();
-	$('#bpm').text(AvgValue);
+	$('#bpm1').text(AvgValue);
+  document.getElementById("tempo").value = AvgValue;
 	console.log(AvgValue);
 	return true;
 }
