--- a/Meeting/MIDI.js-master/examples/violin9.html
+++ b/Meeting/MIDI.js-master/examples/violin9.html
@@ -410,7 +410,7 @@ function Event (beat, duration, note, type,volume ,position) {
   this.duration = duration || 1.0; // default: quarter note
   this.note = note || 69; // default: (A4, 69)
   this.type = type || 'D'; // default: Down bow
-  this.position = position || 0.5; // default: middle bow
+  this.pos = position || 0.5; // default: middle bow
   this.length =  (volume+duration)/2|| 0.3; // default: 0.3
   if((volume+duration)/2>1)this.length = 1;
   this.volume = volume || 127;
@@ -892,10 +892,10 @@ function interpolate(beat) {
 				if (b < keyframes[i].key) break;
 				// take i-1 & i
 			}
-			var p = keyframes[i - 1].position + (keyframes[i].position - keyframes[i - 1].position) * (b - keyframes[i - 1].key) / (keyframes[i].key - keyframes[i - 1].key);
+			var p = keyframes[i - 1].pos + (keyframes[i].pos - keyframes[i - 1].pos) * (b - keyframes[i - 1].key) / (keyframes[i].key - keyframes[i - 1].key);
 		}
 		else { // last position
-			var p = keyframes[keyframes.length - 1].position;
+			var p = keyframes[keyframes.length - 1].pos;
 		}
 		return p; // [0,1]
 }
