--- a/Meeting/MIDI.js-master/examples/violin9.html
+++ b/Meeting/MIDI.js-master/examples/violin9.html
@@ -1208,7 +1208,7 @@ window.onload = function () {
 		if(notej!=0){
 			MIDI.noteOn(1,note1,violinVolume,0);
 		}
-		if(notej==0){
+		else if(notej==0){
 			setTimeout(function(){
 				playMusic();
 			},eventArray[0].beat*1000*60/bpm1);
