--- a/Meeting/MIDI.js-master/examples/violin9.html
+++ b/Meeting/MIDI.js-master/examples/violin9.html
@@ -1212,6 +1212,7 @@ window.onload = function () {
 			setTimeout(function(){
 				playMusic();
 			},eventArray[0].beat*1000*60/bpm1);
+			notej++;
 		}
 		var duration1 = eventArray[notej].duration-0.1;
 		setTimeout(function(){
