--- a/Meeting/MIDI.js-master/examples/violin9.html
+++ b/Meeting/MIDI.js-master/examples/violin9.html
@@ -1205,14 +1205,19 @@ window.onload = function () {
 
 		console.log(note1);
 		var violinVolume=127*eventArray[notej].volume;	//音量大小
-		if(notej!=0){
+		if(eventArray[0].beat!=0){
 			MIDI.noteOn(1,note1,violinVolume,0);
 		}
-		else if(notej==0){
+		else if(eventArray[0].beat==0){
+			
 			setTimeout(function(){
 				playMusic();
 			},eventArray[0].beat*1000*60/bpm1);
 			notej++;
+		
+			
+			
+			
 		}
 		var duration1 = eventArray[notej].duration-0.1;
 		setTimeout(function(){
@@ -1236,7 +1241,10 @@ window.onload = function () {
 			playMusic();
 		},time*1000*60/bpm1);
 	}
-	if(notej==eventArray.length)notej=0;
+	if(notej==eventArray.length){
+		startClick1=false;
+		notej=0;
+	}
 }
 
 </script>
