--- a/Meeting/MIDI.js-master/examples/violin9.html
+++ b/Meeting/MIDI.js-master/examples/violin9.html
@@ -1205,14 +1205,14 @@ window.onload = function () {
 
 		console.log(note1);
 		var violinVolume=127*eventArray[notej].volume;	//音量大小
-		if(notej==0&&eventArray[0].beat==0){
+		if(notej==0&&eventArray[notej].beat==0){
 			MIDI.noteOn(1,note1,violinVolume,0);
 		}
 		
 		
 		else if(notej==0&&eventArray[notej].beat!=0){
 			setTimeout(function(){
-				notej++;
+				//notej++;
 				playMusic();
 			},eventArray[0].beat*1000*60/bpm1);
 		}
