--- a/Meeting/MIDI.js-master/examples/violin9.html
+++ b/Meeting/MIDI.js-master/examples/violin9.html
@@ -961,7 +961,10 @@ function interpolate(beat) {
 			<!-- var p = keyframes[keyframes.length - 1].pos; -->
 		<!-- } -->
 		<!-- return p; // [0,1] -->
-		//var b = beat % period;
+		// non-repeat!
+  if (beat <= period) {  
+
+    //var b = beat % period;
 	b = beat;
 	
     for (var i = 0; i < keyframes.length; i++) {
