--- a/Meeting/MIDI.js-master/examples/violin9.html
+++ b/Meeting/MIDI.js-master/examples/violin9.html
@@ -1240,7 +1240,7 @@ window.onload = function () {
 	if(startClick1) {
 		var bpm1 = $('#tempo').val();
 
-		console.log(note1);
+		//console.log(note1);
 		var violinVolume=127*eventArray[notej].volume;	//音量大小
 		if(notej==0&&eventArray[notej].beat==0){
 			MIDI.noteOn(1,note1,violinVolume,0);
@@ -1250,16 +1250,19 @@ window.onload = function () {
 		else if(notej==0&&eventArray[notej].beat!=0){
 			setTimeout(function(){
 				//notej++;
+				console.log("1");
+				
 				playMusic();
 			},eventArray[0].beat*1000*60/bpm1);
 		}
 		else if(notej!=0){
 			MIDI.noteOn(1,note1,violinVolume,0);
+			console.log("2");
 		}
 		var duration1 = eventArray[notej].duration-0.1;
 		setTimeout(function(){
 			MIDI.noteOff(1,note1,0);
-			console.log(note1+'off');
+			//console.log(note1+'off');
 		},duration1*1000*60/bpm1);
 		var time=eventArray[notej].beat;
 		if(notej<eventArray.length-1){
@@ -1271,16 +1274,20 @@ window.onload = function () {
 	if(!startClick1) {
 		notej= 0;
 		MIDI.noteOff(1,note1,0);
+		console.log("3");
 	}
 
 	if(notej!=0&&notej<eventArray.length && startClick1){
 		setTimeout(function(){
+			console.log("4");
 			playMusic();
 		},time*1000*60/bpm1);
 	}
 	if(notej==eventArray.length){
-		//startClick1=false;
+		startClick1=false;
+		startClick=false;
 		notej=0;
+		console.log("5");
 	}
 	
 }
