--- a/Meeting/MIDI.js-master/examples/violin9.html
+++ b/Meeting/MIDI.js-master/examples/violin9.html
@@ -1271,14 +1271,7 @@ window.onload = function () {
 		console.log("3");
 	}
 	
-	
-	if(notej!=0&&notej<eventArray.length && startClick1){
-		setTimeout(function(){
-			console.log("4");
-			playMusic();
-		},time*1000*60/bpm1);
-	}
-	else if(notej==0&&eventArray[notej].beat!=0){
+	if(notej==0&&eventArray[notej].beat!=0){
 		setTimeout(function(){
 			notej--;
 			console.log("1");
@@ -1286,6 +1279,13 @@ window.onload = function () {
 			playMusic();
 		},eventArray[0].beat*1000*60/bpm1);
 	}
+	if(notej!=0&&notej<eventArray.length && startClick1){
+		setTimeout(function(){
+			console.log("4");
+			playMusic();
+		},time*1000*60/bpm1);
+	}
+	
 	if(notej==eventArray.length){
 		
 		notej=0;
