--- a/Meeting/MIDI.js-master/examples/violin9.html
+++ b/Meeting/MIDI.js-master/examples/violin9.html
@@ -1271,7 +1271,7 @@ window.onload = function () {
 		console.log("3");
 	}
 	
-	if(notej==0&&eventArray[notej].beat!=0){
+	if(notej==1&&eventArray[0].beat!=0){
 		setTimeout(function(){
 			notej--;
 			console.log("1");
